devops/k8s/lessons/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  labels:
    run: kuard
spec:
  selector:
    matchLabels:
      run: kuard
  replicas: 3
  template: #pod template to run
    metadata:
      labels:
        run: kuard
      annotations:
        kubernetes.io/change-cause: "Update to green kuard"
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:green
