devops/k8s/lessons/kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-1
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:blue
    name: kuard-1
    livenessProbe:
      httpGet:
        path: /healthy
        port: 8080
      initialDelaySeconds: 5 #initially wait 5 secs befor calling
      timeoutSeconds: 1 #must respond in 1 seconds
      periodSeconds: 10 #call every 10s
      failureThreshold: 3 #restart container if 3 calls fail
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      periodSeconds: 2 #call every 10s
      initialDelaySeconds: 0
      failureThreshold: 3
      successThreshold: 1 #after one successsfulll check, consider ready
    resources:
      requests:
        cpu: "500m"
        memory: "128Mi"
      limits:
        cpu: "1"
        memory: "512Mi"
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
