devops/k8s/lessons/my-configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard-config
spec:
  containers:
  - name: test-container
    image: gcr.io/kuar-demo/kuard-amd64:blue
    imagePullPolicy: Always
    command:
    - "/kuard"
    - "$(EXTRA_PARAM)" # pass configmap variable as parameter
    volumeMounts:
    - name: config-volume # Mounting the ConfigMap as a set of files
      mountPath: /config
  volumes:
  - name: config-volume
    configMap:
      name: my-configmap
