devops/k8s/lessons/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: my.local
    http:
      paths:
      - pathType: Prefix
        path: "/a/" #the backend must be configured to handle sub-path
        backend:
          service:
            name: alpaca
            port:
              number: 8080
      - pathType: Prefix
        path: "/b/" #the backend must be configured to handle sub-path
        backend:
          service:
            name: bandicoot
            port:
              number: 8080
